iam/iam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iam
  labels:
    app: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iam
  template:
    metadata:
      labels:
        app: iam
    spec:
      imagePullSecrets:
      - name: dockerregcred
      containers:
      - name: iam
        image: ergon/airlock-iam:latest-7.3
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: config
          mountPath: /home/airlock/iam/
        - name: secret
          mountPath: /home/airlock/iam/license.txt
          subPath: license.txt
        livenessProbe:
          httpGet:
            path: /health
            port: https
        readinessProbe:
          httpGet:
            path: /auth-login/health
            port: https
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: iam-pv-claim
      - name: secret
        secret:
          secretName: iam-secrets
