iam/microgateway-iam.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microgateway-iam
  labels:
    app: microgateway-iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microgateway-iam
  template:
    metadata:
      labels:
        app: microgateway-iam
    spec:
      imagePullSecrets:
      - name: dockerregcred
      containers:
      - name: microgateway-iam
        image: ergon/airlock-microgateway:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: https
          containerPort: 8443
        volumeMounts:
        - name: config
          mountPath: /config/config.yaml
          subPath: config.yaml
        - name: secret
          mountPath: /secret/config/
          readOnly: true
        - name: data
          mountPath: /config/templates/
          subPath: microgateway/mapping-templates
        livenessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 90
        readinessProbe:
          httpGet:
            path: /healthz
            port: https
            scheme: HTTPS
          initialDelaySeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-claim
      - name: config
        configMap:
          name: microgateway-iam-config
      - name: secret
        secret:
          secretName: microgateway-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: microgateway-iam
  labels:
    app: microgateway-iam
spec:
  selector:
    app: microgateway-iam
  ports:
    - name: https
      port: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-iam
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /$
        pathType: Prefix
        backend:
          service:
            name: microgateway-iam
            port:
              number: 8443
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: microgateway-iam
            port:
              number: 8443
